--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Gym lad
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: i am gym lad
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: unr_tommopeaceful_180906_1816_9rwwv6.png
 
 #
 # Flags below are optional
