--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,11 @@
 #
 
 # Name of your site (displayed in the header)
-name: Gym lad
+name: Thomas Z
 
 # Short bio or description (displayed in the header)
-description: i am gym lad
+description: Lets go Chelsea
+
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: unr_tommopeaceful_180906_1816_9rwwv6.png
